styles.css
/**
 * This file is part of student-sen-info.
 *
 * student-sen-info is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * student-sen-info is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with student-sen-info.  If not, see <http://www.gnu.org/licenses/>.
 *
 * @author Jonathan Hart
 */

/**
 * Styles for custom CSS classes
 */

/* Floating items left or right */
.pull-left {
	float: left;
}

.pull-right {
	float: right;
}

/* Setting textareas to use a consistent font */
textarea {
	font-family: "Roboto","Helvetica","Arial",sans-serif !important;
}

/* Login page grid cell */
.login-cell {
	padding: 16px 32px;
}

/* Search page */
.search-textfield {
	width: 90%;
}
.search--result-link {
	cursor: pointer;
	line-height: 32px;
}
.search--result-link:hover {
	text-decoration: underline;
}
#search--button-add {
	margin-top: 16px
}

/* Hiding scrollbar on WOW animations */
.wow-overflow-hidden {
	overflow: hidden;
}

/* Modal Box Settings */
.modal-box {
	display: none;
	width: 100%;
	min-width: 400px;
	max-width: 800px;
}
.modal-supporting-text {
	width: 95%;
}
.modal-textfield {
	width: 100%;
}
.modal--comment_thread--comment-div {
	border-bottom: 1px dotted #424242;
	padding-bottom: 22px;
	padding-top: 10px;
}
#modal-textfield--comments {
	min-height: 50px;
	max-height: 400px;
	overflow-y: auto;
}

/* Details Page Card Tables */
.supporting-text-table-container {
	padding: 0;
	width: 100%;
	height: 100%;
	min-height: 200px;
	max-height: 350px;
	overflow-y: auto;
}
.supporting-text-table {
	width: 100%;
	white-space: normal;
}
.mdl-data-table td,
.mdl-data-table__cell--non-numeric.mdl-data-table__cell--non-numeric {
	vertical-align: middle;
	padding: 6px 9px;
}
.mdl-checkbox.is-upgraded {
	padding-left: 0;
}
.mdl-data-table__select {
	width: auto;
}
.mdl-data-table td:last-of-type, .mdl-data-table th:last-of-type {
	padding-right: 10px;
}
.mdl-data-table td .mdl-data-table__select {
	top: 12px;
}
.data-table__cell-overflow-ellipsis {
	text-overflow: ellipsis;
}


/* Details Page Information Card Colours */
.colour--purple-200 {
	background-color: #ce93d8;
}
.colour--purple-400 {
	background-color: #ab47bc;
	color: #fff;
}
.colour--purple-400:hover {
	background-color: #8e24aa;
	color: #fff;
}

.colour--light-green-200 {
	background-color: #c5e1a5;
}
.colour--light-green-400 {
	background-color: #9ccc65;
}
.colour--light-green-400:hover {
	background-color: #7cb342;
}

.colour--orange-200 {
	background-color: #ffcc80;
}
.colour--orange-400 {
	background-color: #ffa726;
}
.colour--orange-400:hover {
	background-color: #fb8c00;
}

.colour--red-200 {
	background-color: #ef9a9a;
}
.colour--red-400 {
	background-color: #ef5350;
	color: #fff;
}
.colour--red-400:hover {
	background-color: #e53935;
	color: #fff;
}

